[package]
name = "cp"
version = "0.1.0"
authors = ["magurofly <fishfishfish@hash.fyi>"]
edition = "2018"
license = "CC0-1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enumeration = { path = "enumeration" }
geometry = { path = "geometry" }
graph = { path = "graph" }
matrix = { path = "matrix" }
number = { path = "number" }
structs = { path = "structs" }
template = { path = "template" }
unionfind = { path = "unionfind" }
fps = { path = "fps" }
fft = { path = "fft" }