[package]
name = "structs"
version = "0.1.0"
authors = ["magurofly <fishfishfish@hash.fyi>"]
edition = "2018"
license = "CC0-1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "=0.2.11"
template = { path = "../template" }
ranges = { path = "../ranges" }
acl_segtree = { package = "ac-library-rs-parted-segtree", path = "../../ac/ac-library-rs-parted-segtree" }
acl_lazysegtree = { package = "ac-library-rs-parted-lazysegtree", path = "../../ac/ac-library-rs-parted-lazysegtree" }
acl_traits = { package = "ac-library-rs-parted-internal-type-traits", path = "../../ac/ac-library-rs-parted-internal-type-traits" }