[package]
name = "template"
version = "0.1.0"
authors = ["magurofly <fishfishfish@hash.fyi>"]
edition = "2018"
license = "CC0-1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "=0.2.11"
ranges = { path = "../ranges" }
value-compression = { path = "../value-compression" }